# real-agents-workshop

./: .gitignore  Dockerfile  README.md  download_data.py  pyproject.toml  utils.py  validate.bat  validate.sh  validate_setup.py
01-anatomy/: README.md  intro.ipynb  intro_solution.ipynb  notebook.ipynb
02-build/: README.md  agent.py  notebook.ipynb  signatures.py
02-build-and-optimize/: README.md  build-and-optimize.ipynb  compare.py  eval_utils.py  gepa_agent.json  trajectory.py
02-build-and-optimize/eval_answer_csvs/: 11_high_value_churned.csv  12_cancellation_rca.csv  14_delivery_distance_sla_breach.csv  16_impossible_weather.csv  2_unique_categories.csv  5_orders_by_status.csv  6_top_store_delivered.csv  7_store_scorecard.csv
02-build-and-optimize/eval_answer_sqls/: 10_basket_affinity.sql  12_cancellation_rca.sql  15_impossible_salary.sql  16_impossible_weather.sql  17_top_brands_snacks.sql  4_avg_age_by_gender.sql  5_orders_by_status.sql  6_top_store_delivered.sql  7_store_scorecard.sql  8_demand_hour_dayofweek.sql
03-observability/: README.md  evaluate.py  notebook.ipynb  trace_utils.py
04-optimisation/: README.md  dataset.py  notebook.ipynb  optimize.py
05-shipping/: README.md
data/: eval_dataset.py
data/eval_answer_csvs/: 10_basket_affinity.csv  13_4week_moving_avg.csv  15_impossible_salary.csv  17_top_brands_snacks.csv  1_product_count.csv  3_store_count.csv  4_avg_age_by_gender.csv  8_demand_hour_dayofweek.csv  9_user_retention.csv
data/eval_answer_sqls/: 11_high_value_churned.sql  13_4week_moving_avg.sql  14_delivery_distance_sla_breach.sql  (+4 more)
(+1 files in other folders)
